# decant

./: .gitignore  README.md
electronics/bom/: decant.csv
electronics/decant/: decant.kicad_pcb  decant.kicad_prl  decant.kicad_pro  decant.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
electronics/decant/gerber/: decant-B_Cu.gbr  decant-B_Mask.gbr  decant-B_Paste.gbr  decant-B_Silkscreen.gbr  decant-Edge_Cuts.gbr  decant-F_Cu.gbr  decant-F_Mask.gbr  decant-F_Paste.gbr  decant-F_Silkscreen.gbr  decant-NPTH.drl  decant-PTH.drl  decant-job.gbrjob
firmware/: .mxproject  .project  CMakeLists.txt  STM32F412RGTX_FLASH.ld  STM32F412RGTX_RAM.ld  decant.ioc
firmware/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
firmware/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
firmware/Core/Src/CANopen/: canopen_driver.c  canopen_driver.h
models/: decant.FCStd
models/case/: body.stl  lid.stl
visu/: .clang-format  CMakeLists.txt  main.cpp  resources.qrc
visu/include/: IconsFontAwesome5.h
visu/include/CAN/: can_definitions.h  can_interface.h
visu/include/ui/: ui.h  ui_bottombar.h  ui_colours.h  ui_config.h  ui_explorer.h  ui_inspector.h  ui_menubar.h
visu/include/usb/: usb_handler.h
visu/resources/: logo.icns
visu/src/: main.cpp
visu/src/CAN/: can_interface.cpp
visu/src/ui/: ui.cpp  ui_bottombar.cpp  ui_colours.cpp  ui_config.cpp  ui_explorer.cpp  ui_inspector.cpp  ui_menubar.cpp
visu/src/usb/: usb_handler.cpp
visu/widgets/: bitinspectortable.cpp  bitinspectortable.h  bitinspectortable.ui  modeselector.cpp  modeselector.h  modeselector.ui  rxcanfilteredtable.cpp  rxcanfilteredtable.h  rxcanfilteredtable.ui  rxcantable.cpp  rxcantable.h  rxcantable.ui  statusbar.cpp  statusbar.h  statusbar.ui
visu/windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui
